# modurlalias

./: .hgignore  .svnignore  CHANGELOG  INSTALL  LICENSE  Makefile.am  autogen.sh  build.sh  configure.ac  install.sh
api/php/: modurlalias.php
config/: .svnignore
doc/: configuration.txt  developers.txt  features.txt  howitworks.txt  httpd.conf
m4/: config_nice.m4
sql/mysql/: schema.sql
src/: .svnignore  Makefile.am  mod_url_alias.c
tests/data/: data.csv  data.ods
tests/mysql/: loaddata.sql
tests/virtualhost/content/: view.php
upgrade/1.0-to-1.1/sql/mysql/: schema.sql
